--- a/ResourceMaker.csproj
+++ b/ResourceMaker.csproj
@@ -53,6 +53,7 @@
   <ItemGroup>
     <Compile Include="Package.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ResourceizeProcessor.cs" />
     <Compile Include="ResourceMakerPackage.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -72,7 +73,16 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.SDK" Version="17.0.32112.339" ExcludeAssets="runtime" NoWarn="NU1604" />
+    <PackageReference Include="Microsoft.VisualStudio.Text.Data">
+      <Version>17.14.249</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Text.UI">
+      <Version>17.14.249</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.VSSDK.BuildTools" Version="17.14.2094" NoWarn="NU1604" />
+    <PackageReference Include="System.ComponentModel.Composition">
+      <Version>9.0.7</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <VSCTCompile Include="ResourceMaker.vsct">
