--- a/ResourceMaker.csproj
+++ b/ResourceMaker.csproj
@@ -59,6 +59,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResourceizeProcessor.cs" />
     <Compile Include="ResourceMakerPackage.cs" />
+    <Compile Include="Views\ResourceEditWindow.xaml.cs">
+      <DependentUpon>ResourceEditWindow.xaml</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Key.snk" />
@@ -80,6 +83,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="CommunityToolkit.Mvvm">
+      <Version>8.4.0</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.SDK" Version="17.0.32112.339" ExcludeAssets="runtime" NoWarn="NU1604" />
     <PackageReference Include="Microsoft.VisualStudio.Text.Data">
       <Version>17.14.249</Version>
@@ -106,6 +112,10 @@
   </ItemGroup>
   <ItemGroup>
     <Page Include="Views\LanguageSelectionWindow.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Views\ResourceEditWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
