--- a/ResourceMaker.csproj
+++ b/ResourceMaker.csproj
@@ -118,8 +118,11 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Resources\Resources.en-US.resx" />
-    <EmbeddedResource Include="Resources\Resources.ja-JP.resx" />
+    <EmbeddedResource Include="Resources\Strings.en-US.resx" />
+    <EmbeddedResource Include="Resources\Strings.fr-FR.resx" />
+    <EmbeddedResource Include="Resources\Strings.ja-JP.resx" />
+    <EmbeddedResource Include="Resources\Strings.ko-KR.resx" />
+    <EmbeddedResource Include="Resources\Strings.zh-CN.resx" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''" />
