--- a/ResourceMaker.UI/ResourceMaker.UI.csproj
+++ b/ResourceMaker.UI/ResourceMaker.UI.csproj
@@ -17,6 +17,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
+    <PackageReference Include="CsvHelper" Version="33.1.0" />
     <PackageReference Include="LibNMeCab" Version="0.10.2" />
   </ItemGroup>
   <ItemGroup>
