--- a/ResourceMaker.csproj
+++ b/ResourceMaker.csproj
@@ -93,6 +93,9 @@
     <PackageReference Include="CommunityToolkit.Mvvm">
       <Version>8.4.0</Version>
     </PackageReference>
+    <PackageReference Include="CsvHelper">
+      <Version>33.1.0</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.SDK" Version="17.0.32112.339" ExcludeAssets="runtime" NoWarn="NU1604" />
     <PackageReference Include="Microsoft.VisualStudio.Text.Data">
       <Version>17.14.249</Version>
